format project cards

--- a/src/src/project.html
+++ b/src/src/project.html
@@ -1,8 +1,211 @@
 <div class="tile is-ancestor">
+    <div class="tile is-parent is-vertical">
+        <div class="tile is-child card">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-content">
+                        <p class="title is-4">Semester Thesis</p>
+                        <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                            Satellite Images
+                        </p>
+                        <p>
+                            Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
+                            imagery,
+                            analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
+                            measurements to
+                            surface reflectance values.
+
+                        </p>
+                    </div>
+                    <div class="media-right">
+                        <figure class="image project-image">
+                            <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                        </figure>
+                        <div class="tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Rasterio/GDAL</span>
+                            <span class="tag">Sk-learn</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tile is-child card card-gap">
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-content">
+                        <p class="title is-4">Semester Thesis</p>
+                        <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                            Satellite Images
+                        </p>
+                        <p>
+                            Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
+                            imagery,
+                            analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
+                            measurements to
+                            surface reflectance values.
+
+                        </p>
+                    </div>
+                    <div class="media-right">
+                        <figure class="image project-image">
+                            <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                        </figure>
+                        <div class="tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Rasterio/GDAL</span>
+                            <span class="tag">Sk-learn</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tile is-parent">
+            <div class="tile is-child card">
+                <div class="card-content">
+                    <div class="media">
+                        <div class="media-content">
+                            <p class="title is-4">Semester Thesis</p>
+                            <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                                Satellite Images
+                            </p>
+                            <p>
+                                Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
+                                imagery,
+                                analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
+                                measurements to
+                                surface reflectance values.
+
+                            </p>
+                        </div>
+                        <div class="media-right">
+                            <figure class="image project-image">
+                                <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                            </figure>
+                            <div class="tags">
+                                <span class="tag">Python</span>
+                                <span class="tag">Rasterio/GDAL</span>
+                                <span class="tag">Sk-learn</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tile is-child card card-gap">
+                <div class="card-content">
+                    <div class="media">
+                        <div class="media-content">
+                            <p class="title is-4">Semester Thesis</p>
+                            <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                                Satellite Images
+                            </p>
+                            <p>
+                                Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
+                                imagery,
+                                analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
+                                measurements to
+                                surface reflectance values.
+
+                            </p>
+                        </div>
+                        <div class="media-right">
+                            <figure class="image project-image">
+                                <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                            </figure>
+                            <div class="tags">
+                                <span class="tag">Python</span>
+                                <span class="tag">Rasterio/GDAL</span>
+                                <span class="tag">Sk-learn</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="tile is-ancestor is-vertical">
+    <div class="tile is-parent project">
+        <div class="card">
+            <div class="tile is-child card-content">
+                <p class="title">Master Thesis</p>
+                <p class="subtitle">Multi-period Optimal Power Flow with Physics-informed Graph Neural Networks</p>
+                <div class="content">
+                    <ul>
+                        <li> Physics informed machine learning</li>
+                        <li> Graph Neural Networks</li>
+                        <li> Optimal Power Flow</li>
+                        <li> Unit Commitment</li>
+                        <li> Mixed Integer Optimization</li>
+                    </ul>
+                    <p>
+                        Designed and implemented and physics-informed graph neural network to solve the multi-period
+                        optimal
+                        power flow problem with unit commitment. Showed promising results on small grids when
+                        compared
+                        to
+                        traditional solvers.
+                    </p>
+                </div>
+            </div>
+            <div class="tile is-child card-image">
+                <figure class="image project-image">
+                    <img class="modal-trigger" data-target="project-2-modal" src="img/PIGNN.svg">
+                </figure>
+                <div class="tags">
+                    <span class="tag">Python</span>
+                    <span class="tag">Pytorch</span>
+                    <span class="tag">Torch Geometric</span>
+                    <span class="tag">Gurobi</span>
+                    <span class="tag">Matpower</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tile is-parent project">
+        <div class="card">
+
+            <div class="tile is-child card-content">
+                <p class="title">Semester Thesis</p>
+                <p class="subtitle">Accuracy and Reliability of Atmospheric Correction for Optical Satellite Images
+                </p>
+                <div class="content">
+                    <ul>
+                        <li> Atmospheric Correction</li>
+                        <li> Remote Sensing</li>
+                        <li> Land Cover Classification</li>
+                    </ul>
+                    <p>
+                        Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
+                        imagery,
+                        analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
+                        measurements
+                        to
+                        surface reflectance values.
+                    </p>
+                </div>
+            </div>
+            <div class="tile is-child card-image">
+                <figure class="image project-image">
+                    <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                </figure>
+                <div class="tags">
+                    <span class="tag">Python</span>
+                    <span class="tag">Rasterio/GDAL</span>
+                    <span class="tag">Sk-learn</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="tile is-ancestor">
     <div class="tile is-verticle is-parent">
-        <div class="tile is-child box">
-            <p class="title">Thesis 1</p>
-            <p class="subtitle">About Something</p>
+        <div class="tile is-child box project">
+            <p class="title">Master Thesis</p>
+            <p class="subtitle">Multi-period Optimal Power Flow with Physics-informed Graph Neural Networks</p>
             <div class="tile is-parent is-vertical">
                 <div class="tile is-child">
                     <figure class="image">
@@ -21,21 +224,127 @@
         </div>
     </div>
     <div class="tile is-vertical is-parent">
-        <div class="tile is-child box">
-            <p class="title">Thesis 2</p>
-            <p class="subtitle">About Something</p>
+        <div class="tile is-child box project">
+            <p class="title">Bachelor Thesis</p>
+            <p class="subtitle">An Efficient Boundary-Respecting Streamfunction-Vorticity Solver</p>
             <div class="tile is-parent is-vertical">
                 <div class="tile is-child is-primary">
                     <figure class="image">
                         <img class="modal-trigger" data-target="project-2-modal" src="img/kelvin_helmholtz_titel.png">
                     </figure>
                 </div>
-                <div class="tile is-child is-success">
+                <div class="tile is-child">
+                    <div class="tags">
+                        <span class="tag">C++</span>
+                        <span class="tag">Eigen</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="tile is-ancestor">
+
+    <div class="tile is-vertical is-parent">
+        <div class="tile is-child box project">
+            <p class="title">Semester Thesis</p>
+            <p class="subtitle">Accuracy and Reliability of Atmospheric Correction for Optical Satellite Images</p>
+            <div class="tile is-parent is-vertical">
+                <div class="tile is-child is-primary">
+                    <figure class="image project-image">
+                        <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                    </figure>
+                </div>
+                <!-- <div class="tile is-child"> -->
+                <div class="tags">
+                    <span class="tag">Python</span>
+                    <span class="tag">Rasterio/GDAL</span>
+                    <span class="tag">Sk-learn</span>
+                </div>
+                <!-- </div> -->
+            </div>
+        </div>
+    </div>
+    <div class="tile is-vertical is-parent">
+        <div class="tile is-child box project">
+            <p class="title">Conference Paper</p>
+            <p class="subtitle">Low-Cost Sensor Node for Air Quality Monitoring</p>
+            <div class="">
+                <div class="tile is-child is-primary">
+                    <figure class="image project-image">
+                        <img class="modal-trigger" data-target="project-2-modal" src="img/Sensorbox.png">
+                    </figure>
+                </div>
+                <!-- <div class="tile is-child"> -->
+                <div class="tags">
+                    <span class="tag">MicroPython</span>
+                    <span class="tag">LoRaWAN/MQTT</span>
+                    <span class="tag">Thingsboard</span>
+                </div>
+                <!-- </div> -->
+            </div>
+        </div>
+    </div>
+    <div class="tile is-vertical is-parent">
+        <div class="tile is-child box project">
+            <p class="title">Personal Project</p>
+            <p class="subtitle">Finot: Time Management / Expense Tracking Webapp</p>
+            <div class="tile is-parent is-vertical">
+                <div class="tile is-child">
                     <div class="tags">
                         <span class="tag">Python</span>
-                        <span class="tag">PyTorch</span>
-                        <span class="tag">Torch Geometric</span>
-                        <span class="tag">Gurobi</span>
+                        <span class="tag">Django</span>
+                        <span class="tag">React</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="tile is-ancestor">
+
+    <div class="tile is-vertical is-parent">
+        <div class="tile is-child box project">
+            <p class="title">Student Project</p>
+            <p class="subtitle">HDBSCAN Implementation</p>
+            <div class="tile is-parent is-vertical">
+                <div class="tile is-child">
+                    <div class="tags">
+                        <span class="tag">C</span>
+                        <span class="tag">Assembly</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="tile is-vertical is-parent">
+        <div class="tile is-child box project">
+            <p class="title">Student Project</p>
+            <p class="subtitle">FLIP-Solver</p>
+            <div class="tile is-parent is-vertical">
+                <div class="tile is-child">
+                    <div class="tags">
+                        <span class="tag">C++</span>
+                        <span class="tag">Eigen</span>
+                        <span class="tag">Paraview</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="tile is-vertical is-parent">
+        <div class="tile is-child box project">
+            <p class="title">Student Project</p>
+            <p class="subtitle">Comparison of High Performance Python Libraries</p>
+            <div class="tile is-parent is-vertical">
+                <div class="tile is-child">
+                    <div class="tags">
+                        <span class="tag">JAX</span>
+                        <span class="tag">Legate</span>
+                        <span class="tag">Bohrium</span>
+                        <span class="tag">GT4Py</span>
                     </div>
                 </div>
             </div>
