--- a/src/src/project.html
+++ b/src/src/project.html
@@ -1,10 +1,72 @@
+<div class="card project-card">
+    <div class="card-content">
+        <div class="columns is-desktop">
+            <!-- Left side content (title, subtitle, description) -->
+            <div class="column content-column">
+                <h3 class="title is-4">Project Title</h3>
+                <h4 class="subtitle is-6">Project Subtitle or Category</h4>
+                <div class="description">
+                    <p>This is a detailed description of the project. It explains what the project is about, the
+                        challenges faced, and the solutions implemented. The text will wrap naturally and maintain
+                        readability across device sizes.</p>
+                </div>
+            </div>
+
+            <!-- Right side content (image and tags) -->
+            <div class="column image-column">
+                <figure class="project-image">
+                    <img src="img/kelvin_helmholtz_titel.png" alt="Project Image">
+                </figure>
+                <div class="tags">
+                    <span class="tag">HTML</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Bulma</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card project-card">
+    <div class="card-content">
+        <div class="columns is-desktop">
+            <!-- Left side content (title, subtitle, description) -->
+            <div class="column content-column">
+                <p class="title is-4">Project Title 2</p>
+                <p class="subtitle is-6">Project Subtitle or Category</p>
+                <div class="description">
+                    <p>This is a detailed description of the project. It explains what the project is about, the
+                        challenges faced, and the solutions implemented. The text will wrap naturally and maintain
+                        readability across device sizes.</p>
+                </div>
+            </div>
+
+            <!-- Right side content (image and tags) -->
+            <div class="column image-column">
+                <figure class="project-image">
+                    <img src="img/SCL_BRA.png" alt="Project Image">
+                </figure>
+                <div class="tags">
+                    <span class="tag">HTML</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Bulma</span>
+                    <span class="tag">Others</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical">
         <div class="tile is-child card">
             <div class="card-content">
                 <div class="media">
                     <div class="media-content">
-                        <p class="title is-4">Semester Thesis</p>
+                        <p class="title is-4">Semester Thesis Large 1</p>
                         <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
                             Satellite Images
                         </p>
@@ -34,7 +96,7 @@
             <div class="card-content">
                 <div class="media">
                     <div class="media-content">
-                        <p class="title is-4">Semester Thesis</p>
+                        <p class="title is-4">Semester Thesis Large 2</p>
                         <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
                             Satellite Images
                         </p>
@@ -61,61 +123,50 @@
             </div>
         </div>
         <div class="tile is-parent">
-            <div class="tile is-child card">
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
-                            <p class="title is-4">Semester Thesis</p>
-                            <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
-                                Satellite Images
-                            </p>
-                            <p>
-                                Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
-                                imagery,
-                                analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
-                                measurements to
-                                surface reflectance values.
+            <div class="block">
+                <div class="tile is-child card">
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4">Semester Thesis Small 1</p>
+                                <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                                    Satellite Images
+                                </p>
 
-                            </p>
-                        </div>
-                        <div class="media-right">
-                            <figure class="image project-image">
-                                <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
-                            </figure>
-                            <div class="tags">
-                                <span class="tag">Python</span>
-                                <span class="tag">Rasterio/GDAL</span>
-                                <span class="tag">Sk-learn</span>
+                            </div>
+                            <div class="media-right">
+                                <figure class="image project-image">
+                                    <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                                </figure>
+                                <div class="tags">
+                                    <span class="tag">Python</span>
+                                    <span class="tag">Rasterio/GDAL</span>
+                                    <span class="tag">Sk-learn</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="tile is-child card card-gap">
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
-                            <p class="title is-4">Semester Thesis</p>
-                            <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
-                                Satellite Images
-                            </p>
-                            <p>
-                                Evaluated the performance of atmospheric correction algorithms for Sentinel-2 satellite
-                                imagery,
-                                analyzing sen2cor and its variants to improve the conversion of top-of-atmosphere
-                                measurements to
-                                surface reflectance values.
-
-                            </p>
-                        </div>
-                        <div class="media-right">
-                            <figure class="image project-image">
-                                <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
-                            </figure>
-                            <div class="tags">
-                                <span class="tag">Python</span>
-                                <span class="tag">Rasterio/GDAL</span>
-                                <span class="tag">Sk-learn</span>
+            <div class="block">
+                <div class="tile is-child card">
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4">Semester Thesis Small 2</p>
+                                <p class="subtitle is-6">Accuracy and Reliability of Atmospheric Correction for Optical
+                                    Satellite Images
+                                </p>
+                            </div>
+                            <div class="media-right">
+                                <figure class="image project-image">
+                                    <img class="modal-trigger" data-target="project-2-modal" src="img/SCL_BRA.png">
+                                </figure>
+                                <div class="tags">
+                                    <span class="tag">Python</span>
+                                    <span class="tag">Rasterio/GDAL</span>
+                                    <span class="tag">Sk-learn</span>
+                                </div>
                             </div>
                         </div>
                     </div>
