move modals to seperate file

--- a/src/src/project.html
+++ b/src/src/project.html
@@ -2,7 +2,7 @@
     <div class="card-content">
         <div class="columns is-desktop">
             <!-- Left side content (title, subtitle, description) -->
-            <div class="column content-column">
+            <div class="column content-column modal-trigger" data-target="master-thesis-modal">
                 <h3 class="title is-4">Project Title</h3>
                 <h4 class="subtitle is-6">Project Subtitle or Category</h4>
                 <div class="description">
