--- a/src/src/index.html
+++ b/src/src/index.html
@@ -298,284 +298,18 @@
     </section>
 
 
-    <div> <!-- Modals -->
-        <div id="project-1-modal" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-card">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Project title</p>
-                    <button class="delete" aria-label="close"></button>
-                </header>
-                <section class="modal-card-body">
+    <%= require('./modals.html') %>
 
-                    <div id="project-1-modal-carousel" class="carousel">
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/1.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/2.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/3.png">
-                        </figure>
-                    </div>
-
-                    <div class="content">
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea
-                            commodo
-                            consequat.</p>
-
-                        <div class="tags">
-                            <span class="tag">angular</span>
-                            <span class="tag">mongo</span>
-                            <span class="tag">typscript</span>
-                            <span class="tag">node</span>
-                        </div>
-
-                    </div>
-
-                </section>
-                <footer class="modal-card-foot">
-                    <button class="button is-success">Close</button>
-                </footer>
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <p>
+                    <a href="https://github.com/mmacneil/devfolio" target="_blank" class="icon has-text-primary">
+                        <i class="fab fa-github"></i> <strong>devfolio</strong></a>
+                </p>
             </div>
-        </div>
+        </footer>
 
-        <div id="project-2-modal" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-card">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Project title</p>
-                    <button class="delete" aria-label="close"></button>
-                </header>
-                <section class="modal-card-body">
-
-                    <div id="project-2-modal-carousel" class="carousel">
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/1.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/2.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/3.png">
-                        </figure>
-                    </div>
-
-                    <div class="content">
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea
-                            commodo
-                            consequat.</p>
-
-                        <div class="tags">
-                            <span class="tag">angular</span>
-                            <span class="tag">mongo</span>
-                            <span class="tag">typscript</span>
-                            <span class="tag">node</span>
-                        </div>
-
-                    </div>
-
-                </section>
-                <footer class="modal-card-foot">
-                    <button class="button is-success">Close</button>
-                </footer>
-            </div>
-        </div>
-
-        <div id="project-3-modal" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-card">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Project title</p>
-                    <button class="delete" aria-label="close"></button>
-                </header>
-                <section class="modal-card-body">
-                    <div id="project-3-modal-carousel" class="carousel">
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/1.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/2.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/3.png">
-                        </figure>
-                    </div>
-
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea
-                            commodo
-                            consequat.</p>
-                        <div class="tags">
-                            <span class="tag">angular</span>
-                            <span class="tag">mongo</span>
-                            <span class="tag">typscript</span>
-                            <span class="tag">node</span>
-                        </div>
-                    </div>
-
-                </section>
-                <footer class="modal-card-foot">
-                    <button class="button is-success">Close</button>
-                </footer>
-            </div>
-        </div>
-
-        <div id="project-4-modal" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-card">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Project title</p>
-                    <button class="delete" aria-label="close"></button>
-                </header>
-                <section class="modal-card-body">
-                    <div id="project-4-modal-carousel" class="carousel">
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/1.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/2.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/3.png">
-                        </figure>
-                    </div>
-
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea
-                            commodo
-                            consequat.</p>
-                        <div class="tags">
-                            <span class="tag">angular</span>
-                            <span class="tag">mongo</span>
-                            <span class="tag">typscript</span>
-                            <span class="tag">node</span>
-                        </div>
-                    </div>
-
-                </section>
-                <footer class="modal-card-foot">
-                    <button class="button is-success">Close</button>
-                </footer>
-            </div>
-        </div>
-
-        <div id="project-5-modal" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-card">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Project title</p>
-                    <button class="delete" aria-label="close"></button>
-                </header>
-                <section class="modal-card-body">
-                    <div id="project-5-modal-carousel" class="carousel">
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/1.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/2.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/3.png">
-                        </figure>
-                    </div>
-
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea
-                            commodo
-                            consequat.</p>
-                        <div class="tags">
-                            <span class="tag">angular</span>
-                            <span class="tag">mongo</span>
-                            <span class="tag">typscript</span>
-                            <span class="tag">node</span>
-                        </div>
-                    </div>
-
-                </section>
-                <footer class="modal-card-foot">
-                    <button class="button is-success">Close</button>
-                </footer>
-            </div>
-        </div>
-
-        <div id="project-6-modal" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-card">
-                <header class="modal-card-head">
-                    <p class="modal-card-title">Project title</p>
-                    <button class="delete" aria-label="close"></button>
-                </header>
-                <section class="modal-card-body">
-                    <div id="project-6-modal-carousel" class="carousel">
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/1.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/2.png">
-                        </figure>
-                        <figure class="image is-4by3 carousel-cell">
-                            <img src="img/carousel/3.png">
-                        </figure>
-                    </div>
-
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore
-                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea
-                            commodo
-                            consequat.</p>
-                        <div class="tags">
-                            <span class="tag">angular</span>
-                            <span class="tag">mongo</span>
-                            <span class="tag">typscript</span>
-                            <span class="tag">node</span>
-                        </div>
-                    </div>
-
-                </section>
-                <footer class="modal-card-foot">
-                    <button class="button is-success">Close</button>
-                </footer>
-            </div>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <div class="content has-text-centered">
-            <p>
-                <a href="https://github.com/mmacneil/devfolio" target="_blank" class="icon has-text-primary">
-                    <i class="fab fa-github"></i> <strong>devfolio</strong></a>
-            </p>
-        </div>
-    </footer>
-
-    <!-- <script src="/js/bundle.js"></script> -->
+        <!-- <script src="/js/bundle.js"></script> -->
 </body>
 
 </html>
